--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
             <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk, belajar web programming!</h2>
-            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id temporibus maiores sequi vitae saepe iusto deleniti!</p>
+            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Jangan lupa ya bagi temen² yang mau Belajar programing jangan lupa berdoa di awal biar berkah</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari berteman</h3>
-            <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus quos, hic animi quasi ipsum exercitationem ipsam incidunt voluptatem.</p>
+            <p class="font-medium text-base text-secondary mb-6 lg:text-lg">kamu bisa juga menemukan saya di media sosial saya tinggal klik ajh</p>
             <div class="flex items-center">
               <!-- Youtube -->
               <a
@@ -151,7 +151,7 @@
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
             <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus porro consequuntur alias, commodi nemo enim aliquam ipsam obcaecati? Assumenda, ipsam?</p>
+            <p class="font-medium text-md text-secondary md:text-lg">baiklah temen² ini adalah projek² sederhana kami biarpun jelek ya mohon dimaklumi karna masi belajar. </p>
           </div>
         </div>
 
@@ -161,21 +161,21 @@
               <img src="dist/img/portfolio/1.png" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Landing Page Muis</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Al</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/portfolio/2.png" alt="E-Commerce" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">E-Commerce</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="font-medium text-base text-secondary">Hayy ini adalah e commerce sederhana kami teryata masi cukup sederhana ya.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/portfolio/3.png" alt="Technical Documentation" width="w-full" />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Technical Documentation</h3>
-            <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="font-medium text-base text-text-secondary">Ini adalah sedikit dari dokumentasi kami yaaa</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
@@ -196,7 +196,7 @@
           <div class="mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
             <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
-            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit facilis velit!</p>
+            <p class="font-medium text-md text-secondary md:text-lg">baiklah dibawah ini adalah perusahaan² yang bekerja sama dengan kami</p>
           </div>
         </div>
 
